commit clean caches

--- a/app/src/main/res/xml/pref_config.xml
+++ b/app/src/main/res/xml/pref_config.xml
@@ -39,4 +39,8 @@
         android:key="recordLog"
         android:title="记录日志"
         app:iconSpaceReserved="false" />
+    <Preference
+        android:key="cleanCache"
+        android:title="@string/cleancache"
+        app:iconSpaceReserved="false" />
 </androidx.preference.PreferenceScreen>
