--- a/app/src/main/res/xml/pref_config_theme.xml
+++ b/app/src/main/res/xml/pref_config_theme.xml
@@ -4,7 +4,7 @@
 
 
     <io.legado.app.lib.theme.prefs.ATESwitchPreference
-        android:defaultValue="false"
+        android:defaultValue="true"
         android:key="transparentStatusBar"
         android:title="@string/status_bar_immersion"
         app:iconSpaceReserved="false" />
