--- a/app/src/main/res/xml/pref_config_theme.xml
+++ b/app/src/main/res/xml/pref_config_theme.xml
@@ -6,7 +6,8 @@
     <io.legado.app.lib.theme.prefs.ATESwitchPreference
         android:defaultValue="true"
         android:key="transparentStatusBar"
-        android:title="@string/status_bar_immersion"
+        android:summary="@string/status_bar_immersion"
+        android:title="@string/immersion_status_bar"
         app:iconSpaceReserved="false" />
 
     <io.legado.app.lib.theme.prefs.ATESwitchPreference
