--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -23,6 +23,12 @@
         <item name="android:windowNoTitle">true</item>
     </style>
 
+    <!-- BookInfo主题 -->
+    <style name="AppTheme.BookInfo" parent="Base.AppTheme">
+        <item name="actionBarStyle">@style/AppTheme.AppBarOverlay.Light</item>
+        <item name="elevation">0dp</item><!--去掉toolbar阴影，去线留白-->
+    </style>
+
     <!-- Base application theme. -->
     <style name="Base.AppTheme" parent="Theme.AppCompat.DayNight.NoActionBar">
         <item name="colorPrimary">@color/colorPrimary</item>
