--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,6 +5,10 @@
     <color name="colorAccent">@color/md_pink_800</color>
     <color name="divider">#66666666</color>
 
+    <color name="lightBlue_color">#FF578FCC</color>
+    <color name="shine_color">#FF212227</color>
+    <color name="item_bg_color">#FF272731</color>
+
     <color name="error">#eb4333</color>
     <color name="success">#439b53</color>
 
