--- a/app/src/main/res/layout/activity_rss_read.xml
+++ b/app/src/main/res/layout/activity_rss_read.xml
@@ -5,6 +5,7 @@
     android:orientation="vertical">
 
     <io.legado.app.ui.widget.TitleBar
+        android:id="@+id/title_bar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
