--- a/app/src/main/res/layout/activity_book_read.xml
+++ b/app/src/main/res/layout/activity_book_read.xml
@@ -4,13 +4,13 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <io.legado.app.ui.widget.page.ContentView
+    <io.legado.app.ui.book.read.page.ContentView
         android:id="@+id/content_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:visibility="invisible" />
 
-    <io.legado.app.ui.widget.page.PageView
+    <io.legado.app.ui.book.read.page.PageView
         android:id="@+id/page_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
