--- a/app/src/main/res/layout/view_book_page.xml
+++ b/app/src/main/res/layout/view_book_page.xml
@@ -27,7 +27,7 @@
 
     </LinearLayout>
 
-    <io.legado.app.ui.widget.page.ContentTextView
+    <io.legado.app.ui.book.read.page.ContentTextView
         android:id="@+id/content_text_view"
         android:layout_width="match_parent"
         android:layout_height="0dp"
