--- a/app/src/main/res/menu/download.xml
+++ b/app/src/main/res/menu/download.xml
@@ -1,4 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu>
+<menu xmlns:android="http://schemas.android.com/apk/res/android">
+
+    <item
+        android:id="@+id/menu_download_start"
+        android:title="@string/action_download" />
 
 </menu>
