--- a/app/src/main/res/menu/download.xml
+++ b/app/src/main/res/menu/download.xml
@@ -5,6 +5,7 @@
     <item
         android:id="@+id/menu_download_start"
         android:title="@string/action_download"
+        android:icon="@drawable/ic_play_24dp"
         app:showAsAction="ifRoom" />
 
 </menu>
