--- a/app/src/main/res/menu/download.xml
+++ b/app/src/main/res/menu/download.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
-        android:id="@+id/menu_download_start"
+        android:id="@+id/menu_download"
         android:title="@string/action_download"
         android:icon="@drawable/ic_play_24dp"
         app:showAsAction="ifRoom" />
