--- a/app/src/main/res/xml/pref_config_web_dav.xml
+++ b/app/src/main/res/xml/pref_config_web_dav.xml
@@ -2,23 +2,29 @@
 <androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <androidx.preference.EditTextPreference
-        android:key="web_dav_url"
-        android:title="WebDav 服务器地址"
-        android:summary="@string/web_dav_url_s"
-        app:iconSpaceReserved="false" />
+    <io.legado.app.lib.theme.prefs.ATEPreferenceCategory
+        android:title="@string/web_dav_set"
+        app:iconSpaceReserved="false">
 
-    <androidx.preference.EditTextPreference
-        android:key="web_dav_account"
-        android:title="WebDav 账号"
-        android:summary="@string/web_dav_account_s"
-        app:iconSpaceReserved="false" />
+        <androidx.preference.EditTextPreference
+            android:key="web_dav_url"
+            android:title="WebDav 服务器地址"
+            android:summary="@string/web_dav_url_s"
+            app:iconSpaceReserved="false" />
 
-    <androidx.preference.EditTextPreference
-        android:key="web_dav_password"
-        android:title="WebDav 密码"
-        android:summary="@string/web_dav_pw_s"
-        app:iconSpaceReserved="false" />
+        <androidx.preference.EditTextPreference
+            android:key="web_dav_account"
+            android:title="WebDav 账号"
+            android:summary="@string/web_dav_account_s"
+            app:iconSpaceReserved="false" />
+
+        <androidx.preference.EditTextPreference
+            android:key="web_dav_password"
+            android:title="WebDav 密码"
+            android:summary="@string/web_dav_pw_s"
+            app:iconSpaceReserved="false" />
+
+    </io.legado.app.lib.theme.prefs.ATEPreferenceCategory>
 
     <io.legado.app.lib.theme.prefs.ATEPreferenceCategory app:iconSpaceReserved="false">
 
