优化bookshelf显示效果以及去除tabs点击黑色背景

--- a/app/src/main/res/layout/item_bookshelf_list.xml
+++ b/app/src/main/res/layout/item_bookshelf_list.xml
@@ -180,6 +180,8 @@
     <View
         android:layout_width="match_parent"
         android:layout_height="0.5dp"
+        android:layout_marginLeft="18dp"
+        android:layout_marginRight="18dp"
         android:background="@color/btn_bg_press"
         app:layout_constraintBottom_toBottomOf="parent" />
 
