修改bookshelf grid显示效果2

--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -140,4 +140,8 @@
     <declare-styleable name="ATEAccentBgTextView">
         <attr name="abt_radius" format="dimension" />
     </declare-styleable>
+
+    <declare-styleable name="BadgeView">
+        <attr name="bv_radius" format="dimension" />
+    </declare-styleable>
 </resources>
