--- a/app/src/main/res/layout/item_bookshelf_grid.xml
+++ b/app/src/main/res/layout/item_bookshelf_grid.xml
@@ -51,19 +51,19 @@
 
     <FrameLayout
         android:id="@+id/fl_author"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintLeft_toLeftOf="@id/iv_cover"
         app:layout_constraintBottom_toBottomOf="@id/iv_cover">
 
         <io.legado.app.ui.widget.BadgeView
             android:id="@+id/bv_author"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center|bottom"
+            android:layout_gravity="center"
             android:includeFontPadding="false"
-            android:layout_margin="5dp"
             android:singleLine="true"
+            app:bv_radius="0dp"
             tools:ignore="RtlHardcoded" />
 
     </FrameLayout>
@@ -78,7 +78,7 @@
         android:ellipsize="end"
         android:text="@string/book_name"
         android:textColor="@color/tv_text_default"
-        android:textSize="16sp"
+        android:textSize="12sp"
         app:layout_constraintLeft_toLeftOf="@+id/iv_cover"
         app:layout_constraintRight_toRightOf="@+id/iv_cover"
         app:layout_constraintTop_toBottomOf="@+id/iv_cover"
