--- a/app/src/main/res/layout/item_bookshelf_grid.xml
+++ b/app/src/main/res/layout/item_bookshelf_grid.xml
@@ -49,24 +49,17 @@
             tools:ignore="RtlHardcoded" />
     </FrameLayout>
 
-    <FrameLayout
-        android:id="@+id/fl_author"
+    <io.legado.app.ui.widget.BadgeView
+        android:id="@+id/bv_author"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:includeFontPadding="false"
+        android:singleLine="true"
+        app:bv_radius="1dp"
         app:layout_constraintLeft_toLeftOf="@id/iv_cover"
-        app:layout_constraintBottom_toBottomOf="@id/iv_cover">
-
-        <io.legado.app.ui.widget.BadgeView
-            android:id="@+id/bv_author"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:includeFontPadding="false"
-            android:singleLine="true"
-            app:bv_radius="0dp"
-            tools:ignore="RtlHardcoded" />
-
-    </FrameLayout>
+        app:layout_constraintBottom_toBottomOf="@id/iv_cover"
+        tools:ignore="RtlHardcoded" />
 
     <TextView
         android:id="@+id/tv_name"
