BadgeView支持绘制成上平角

--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -143,5 +143,6 @@
 
     <declare-styleable name="BadgeView">
         <attr name="bv_radius" format="dimension" />
+        <attr name="up_flat_angle" format="boolean" />
     </declare-styleable>
 </resources>
