--- a/app/src/main/res/layout/item_bookshelf_grid.xml
+++ b/app/src/main/res/layout/item_bookshelf_grid.xml
@@ -56,6 +56,7 @@
         android:includeFontPadding="false"
         android:singleLine="true"
         app:bv_radius="1dp"
+        app:up_flat_angle="true"
         app:layout_constraintLeft_toLeftOf="@id/iv_cover"
         app:layout_constraintBottom_toBottomOf="@id/iv_cover"
         tools:ignore="RtlHardcoded" />
