--- a/app/src/main/res/xml/pref_config_read.xml
+++ b/app/src/main/res/xml/pref_config_read.xml
@@ -22,6 +22,12 @@
 
     <io.legado.app.lib.theme.prefs.ATESwitchPreference
         android:defaultValue="false"
+        android:title="@string/click_all_next_page"
+        android:key="clickAllNext"
+        app:iconSpaceReserved="false" />
+
+    <io.legado.app.lib.theme.prefs.ATESwitchPreference
+        android:defaultValue="false"
         android:title="@string/volume_key_page_on_play"
         android:key="volumeKeyPageOnPlay"
         app:iconSpaceReserved="false" />
