--- a/app/src/main/res/xml/pref_main.xml
+++ b/app/src/main/res/xml/pref_main.xml
@@ -20,6 +20,12 @@
 
     <io.legado.app.lib.theme.prefs.ATESwitchPreference
         android:defaultValue="false"
+        android:key="isEInkMode"
+        android:title="@string/eink_theme"
+        app:iconSpaceReserved="false" />
+
+    <io.legado.app.lib.theme.prefs.ATESwitchPreference
+        android:defaultValue="false"
         android:key="webService"
         android:title="@string/web_service"
         app:iconSpaceReserved="false" />
