--- a/app/src/main/res/xml/pref_main.xml
+++ b/app/src/main/res/xml/pref_main.xml
@@ -12,17 +12,12 @@
         android:title="@string/replace_purify"
         app:iconSpaceReserved="false" />
 
-    <io.legado.app.lib.theme.prefs.ATESwitchPreference
-        android:defaultValue="true"
-        android:key="autoDarkMode"
-        android:summary="@string/auto_dark_mode_s"
-        android:title="@string/auto_dark_mode"
-        app:iconSpaceReserved="false" />
-
-    <io.legado.app.lib.theme.prefs.ATESwitchPreference
-        android:defaultValue="false"
-        android:key="isNightTheme"
-        android:title="@string/night_theme"
+    <io.legado.app.lib.theme.prefs.ATEListPreference
+        android:defaultValue="0"
+        android:entries="@array/theme_mode"
+        android:entryValues="@array/theme_mode_v"
+        android:key="themeMode"
+        android:title="@string/theme_mode"
         app:iconSpaceReserved="false" />
 
     <io.legado.app.lib.theme.prefs.ATESwitchPreference
