--- a/app/src/main/res/layout/item_import_book.xml
+++ b/app/src/main/res/layout/item_import_book.xml
@@ -31,26 +31,28 @@
             app:tint="@color/tv_text_default" />
     </FrameLayout>
 
-    <RelativeLayout
+    <LinearLayout
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_weight="1"
-        android:paddingTop="8dp"
-        android:paddingBottom="8dp">
+        android:orientation="vertical">
 
         <TextView
             android:id="@+id/tv_name"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="0dp"
+            android:layout_weight="1"
             android:singleLine="true"
             android:text="@string/app_name"
-            android:textSize="16sp" />
+            android:textSize="16sp"
+            android:gravity="center_vertical"
+            tools:ignore="NestedWeights" />
 
         <LinearLayout
             android:id="@+id/ll_brief"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
+            android:layout_height="0dp"
+            android:layout_weight="1"
             android:gravity="center_vertical"
             android:orientation="horizontal">
 
@@ -82,12 +84,5 @@
                 tools:text="2017-05-22" />
         </LinearLayout>
 
-        <TextView
-            android:id="@+id/tv_sub_count"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:visibility="gone"
-            tools:text="0 项" />
-    </RelativeLayout>
+    </LinearLayout>
 </LinearLayout>
