--- a/app/src/main/res/layout/item_import_book.xml
+++ b/app/src/main/res/layout/item_import_book.xml
@@ -35,6 +35,8 @@
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_weight="1"
+        android:paddingTop="5dp"
+        android:paddingBottom="5dp"
         android:orientation="vertical">
 
         <TextView
