--- a/app/src/main/res/layout/activity_rss_favorites.xml
+++ b/app/src/main/res/layout/activity_rss_favorites.xml
@@ -1,7 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
-</LinearLayout>
+    <io.legado.app.ui.widget.TitleBar
+        android:id="@+id/title_bar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:title="@string/favorites"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <io.legado.app.ui.widget.dynamiclayout.DynamicFrameLayout
+        android:id="@+id/content_view"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/title_bar">
+
+        <io.legado.app.ui.widget.recycler.RefreshRecyclerView
+            android:id="@+id/refresh_recycler_view"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+
+    </io.legado.app.ui.widget.dynamiclayout.DynamicFrameLayout>
+
+</androidx.constraintlayout.widget.ConstraintLayout>
