--- a/app/src/main/res/layout/dialog_read_aloud.xml
+++ b/app/src/main/res/layout/dialog_read_aloud.xml
@@ -57,6 +57,7 @@
 
     </LinearLayout>
 
+    <View style="@style/Style.Shadow.Bottom" />
 
     <LinearLayout
         android:layout_width="match_parent"
