--- a/app/src/main/res/layout/dialog_page_key.xml
+++ b/app/src/main/res/layout/dialog_page_key.xml
@@ -3,6 +3,7 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/background"
     android:padding="16dp">
 
     <TextView
