--- a/app/src/main/res/xml/pref_config_aloud.xml
+++ b/app/src/main/res/xml/pref_config_aloud.xml
@@ -16,7 +16,7 @@
 
     <androidx.preference.ListPreference
         android:key="ttsSpeechPer"
-        android:title="在线朗读音色"
+        android:title="@string/tone_colour"
         android:defaultValue="0"
         android:entries="@array/tts_speech_per"
         android:entryValues="@array/tts_speech_per_value"
