--- a/app/src/main/res/layout/item_arrange_book.xml
+++ b/app/src/main/res/layout/item_arrange_book.xml
@@ -3,7 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:padding="6dp">
 
     <io.legado.app.lib.theme.view.ATECheckBox
         android:id="@+id/checkbox"
