--- a/app/src/main/res/layout/activity_arrange_book.xml
+++ b/app/src/main/res/layout/activity_arrange_book.xml
@@ -7,6 +7,7 @@
     android:layout_height="match_parent">
 
     <io.legado.app.ui.widget.TitleBar
+        android:id="@+id/title_bar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:title="@string/arrange_bookshelf" />
